--- a/index.html
+++ b/index.html
@@ -16,71 +16,79 @@
 </head>
 
 <body>
-    <header>
+    <div class="page-container">
+    <header class="top-line">
+        <div class="container-nav container">
         <nav class="navigation">
             <a class="logo" href="./index.html">Web<span class="studio">Studio</span></a>
-            <ul>
-                <li>
+            <ul class="navigation-menu">
+                <li class="nav-menu-item">
                     <a class="menu" href="./index.html">Studio</a>
                 </li>
-                <li>
+                <li class="nav-menu-item">
                     <a class="menu" href="">Portfolio</a>
                 </li>
-                <li>
+                <li class="nav-menu-item">
                     <a class="menu" href="">Contacts</a>
                 </li>
             </ul>
         </nav>
         <address class="contacts">
-            <ul>
-                <li>
+            <ul class="contacts-list">
+                <li class="contacts-list-item">
                     <a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
-                <li>
+                <li class="contacts-list-item">
                     <a class="contacts-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
                 </li>
             </ul>
         </address>
+        </div>
     </header>
 
     <main>
-        <section class="hero">
+        <section class="hero section">
+            <div class="container">
             <h1 class="main-title">Effective Solutions for Your Business</h1>
             <button type="button" class="button">Order Service</button>
+            </div>
         </section>
 
-        <section class="description">
-            <h2>Features</h2>
-            <ul>
-                <li>
+        <section class="description section">
+            <div class="container">
+            <h2 class="visually-hidden">Features</h2>
+            <ul class="descr-list">
+                <li class="descr-item">
                     <h3 class="description-title">Strategy</h3>
                     <p class="descr-info">Our goal is to identify the business problem to walk away with the perfect and
                         creative solution.</p>
 
                 </li>
-                <li>
+                <li class="descr-item">
                     <h3 class="description-title">Punctuality</h3>
                     <p class="descr-info">Bring the key message to the brand's audience for the best price within the
                         shortest possible time.</p>
 
                 </li>
-                <li>
+                <li class="descr-item">
                     <h3 class="description-title">Diligence</h3>
                     <p class="descr-info">Research and confirm brands that present the strongest digital growth
                         opportunities and minimize risk.</p>
 
                 </li>
-                <li>
+                <li class="descr-item">
                     <h3 class="description-title">Technologies</h3>
                     <p class="descr-info">Design practice focused on digital experiences. We bring forth a deep passion
                         for problem-solving.</p>
                 </li>
             </ul>
+            </div>
         </section>
 
-        <section class="team">
+        <section class="team section">
+            <div class="container">
             <h2 class="team-title">Our Team</h2>
-            <ul>
+            <ul class="team-list">
                 <li class="workers">
                     <img src="./images/workers/img1.jpg" alt="first worker" width="264" height="260">
                     <h3 class="team-subtitle">Mark Guerrero</h3>
@@ -103,50 +111,68 @@
 
                 </li>
             </ul>
+            </div>
         </section>
-        <section class="portfolio">
+        <section class="portfolio section">
+            <div class="container">
             <h2 class="portfolio-title">Our Portfolio</h2>
-            <ul>
-                <li>
+            <ul class="portfolio-list">
+                <li class="portfolio-item">
                     <img src="./images/portfolio/banking-app.jpg" alt="banking app" width="360" height="300">
+                    <div class="container-portfolio">
                     <h3 class="portfolio-subtitle">Banking App</h3>
                     <p class="portfolio-info">App</p>
+                    </div>
                 </li>
-                <li>
+                <li class="portfolio-item">
                     <img src="./images/portfolio/cashless-payment.jpg" alt="Cashless Payment" width="360" height="300">
+                    <div class="container-portfolio">
                     <h3 class="portfolio-subtitle">Cashless Payment</h3>
                     <p class="portfolio-info">Marketing</p>
+                    </div>
                 </li>
-                <li>
+                <li class="portfolio-item">
                     <img src="./images/portfolio/meditation-app.jpg" alt="Meditation App" width="360" height="300">
+                    <div class="container-portfolio">
                     <h3 class="portfolio-subtitle">Meditation App</h3>
                     <p class="portfolio-info">App</p>
+                    </div>
                 </li>
-                <li>
+                <li class="portfolio-item">
                     <img src="./images/portfolio/taxi-service.jpg" alt="taxi service" width="360" height="300">
+                    <div class="container-portfolio">
                     <h3 class="portfolio-subtitle">Taxi Service</h3>
                     <p class="portfolio-info">Marketing</p>
+                    </div>
                 </li>
-                <li>
+                <li class="portfolio-item">
                     <img src="./images/portfolio/screen-illustrations.jpg" alt="Screen Illustrations" width="360"
                         height="300">
+                        <div class="container-portfolio">
                     <h3 class="portfolio-subtitle">Screen Illustrations</h3>
                     <p class="portfolio-info">Design</p>
+                        </div>
                 </li>
-                <li>
+                <li class="portfolio-item">
                     <img src="./images/portfolio/online-ourses.jpg" alt="Online Courses" width="360" height="300">
+                    <div class="container-portfolio">
                     <h3 class="portfolio-subtitle">Online Courses</h3>
                     <p class="portfolio-info">Marketing</p>
+                    </div>
                 </li>
             </ul>
+            </div>
         </section>
     </main>
 
     <footer class="bottom-page">
+        <div class="container">
         <a class="logo" href="./index.html">Web<span class="studio">Studio</span></a>
         <p class="bottom-page-text">Increase the flow of customers and sales for your business with digital marketing &
             growth solutions.</p>
+        </div>
     </footer>
+    </div>
 </body>
 
 </html>
