--- a/index.html
+++ b/index.html
@@ -91,23 +91,31 @@
             <ul class="team-list">
                 <li class="workers">
                     <img src="./images/workers/img1.jpg" alt="first worker" width="264" height="260">
+                    <div class="container-workers">
                     <h3 class="team-subtitle">Mark Guerrero</h3>
                     <p class="team-jobtitle">Product Designer</p>
+                    </div>
                 </li>
                 <li class="workers">
                     <img src="./images/workers/img2.jpg" alt="second worker " width="264" height="260">
+                    <div class="container-workers">
                     <h3 class="team-subtitle">Tom Ford</h3>
                     <p class="team-jobtitle">Frontend Developer</p>
+                    </div>
                 </li>
                 <li class="workers">
                     <img src="./images/workers/img3.jpg" alt="third worker" width="264" height="260">
+                    <div class="container-workers">
                     <h3 class="team-subtitle">Camila Garcia</h3>
                     <p class="team-jobtitle">Marketing</p>
+                    </div>
                 </li>
                 <li class="workers">
                     <img src="./images/workers/img4.jpg" alt="fourth worker" width="264" height="260">
+                    <div class="container-workers">
                     <h3 class="team-subtitle">Daniel Wilson</h3>
                     <p class="team-jobtitle">UI Designer</p>
+                    </div>
 
                 </li>
             </ul>
